 syntax = "proto3";

 package exampleproto;

 message Something {
 	int64 fieldX  = 1;
 	int64 fieldYY = 2;
 	int64 fieldZ  = 3;
}

 message StringBackedMessage {
 	string fieldX  = 1;
 	string fieldYY = 2;
 	string fieldZ  = 3;
}

message BytesBackedMessage {
 	bytes fieldX  = 1;
 	bytes fieldYY = 2;
 	bytes fieldZ  = 3;
}

message NewSchema {
 	int64 fieldX  = 1;
 	int64 fieldY  = 2;
 	int64 fieldZ  = 3;
	int64 fieldZZ = 4;
}